--- a/config/rsintegrate_default.toml
+++ b/config/rsintegrate_default.toml
@@ -2,6 +2,10 @@ name = "Integration Server Settings"
 min_translate_change = 0.10 # meters
 min_rotation_change= 10.0 # degrees
 
+depth_scale = 1000.0 # Z16 conversion to meters. 1 int is 1 millimeter.
+depth_trunc = 3.0 # Truncate depth image after 3 meters
+path_intrinsic = "config/camera_intrinsic_rgb_424.json"
+
 [scalable_tsdf]
 voxel_length= 0.03125
 sdf_trunc= 0.08
