--- a/config/rsintegrate_default.toml
+++ b/config/rsintegrate_default.toml
@@ -3,6 +3,7 @@ name = "Integration Server Settings"
 min_translate_change = 0.10 # meters
 min_rotation_change= 10.0 # degrees
 
+# Depth Configuation
 depth_scale = 1000.0 # Z16 conversion to meters. 1 int is 1 millimeter.
 depth_trunc = 3.0 # Truncate depth image after 3 meters
 path_intrinsic = "config/camera_intrinsic_rgb_424.json" # Intriniscs of the RGBD Frames
@@ -16,5 +17,8 @@ voxel_length= 0.05
 sdf_trunc= 0.15
 depth_sampling_stride= 4
 color_type= 1 # None, Color, Gray
+
+# Mesh Extraction
+color_vertices=true
 
 
