add comments to toml file

--- a/config/rssave_default.toml
+++ b/config/rssave_default.toml
@@ -1,9 +1,11 @@
 name = "Save Settings"
-base_path = "data/realsense"
+base_path = "data/realsense" # Base path to save data, will create subfolders
+
+# Only save data if sensor translation and rotation changed this much
 min_translate_change = 0.10 # meters
 min_rotation_change= 10.0 # degrees
 
-# WIP
+# Will save data to all these subscribed topics
 [subscribe]
 
   [subscribe.depth]
