--- a/config/rspub_default.toml
+++ b/config/rspub_default.toml
@@ -1,9 +1,11 @@
 name = "Default Settings for D435 and T265."
-show_images = true
-show_polygon = true
-depth_auto_exposure = 0.0
-depth_exposure = 8000.0
+depth_auto_exposure = 0.0 # Set to 1.0 to enable autoexposure
+depth_exposure = 8000.0 # Microseconds for exposure 
 
+### Manual Streams ###
+# Open a stream __manually__, in other words a completely indepenent sensor stream with its own procesing callback
+# This method seems to be the only way to get high frequency data *reliably** out of a Intel RealSense device
+# at the same time as low frequency data 
 [[manual_streams]]
 device_name = "Intel RealSense T265"
 stream_name = "Pose"
@@ -13,6 +15,9 @@ framerate = 200
 format = "6DOF"
 active = true
 
+### Pipeline Streams ###
+# These streams are processed together in ONE callback. These would be streams that make sense to be processed together
+# Such as a depth and rgb stream
 [[pipeline_streams]]
 device_name = "Intel RealSense D435i"
 stream_name = "Depth"
@@ -30,6 +35,11 @@ height = 240
 framerate = 30
 format = "BGR8"
 active = true
+
+
+### Filters ###
+# These are the standard RealSense Post Processing filters
+# https://github.com/IntelRealSense/librealsense/blob/master/doc/post-processing-filters.md
 
 [filters]
 
@@ -56,26 +66,37 @@ active = true
   [filters.align]
   active=true
 
+
+### Topics ###
+# These will be the topics published
+# A rate of 1 means process at the frequency recieved
+# A rate of 2 means process at half frequency (i.e. skip every other message)
+
 [publish]
 
+  # Just Depth
   [publish.depth]
   active = false
   rate = 1
 
+  # Just Color
   [publish.color]
   active = false
   rate = 1
 
+  # Color and Depth combined in one frame
   [publish.rgbd]
   active = true
   rate = 1
 
+  # 6DOF Pose
   [publish.pose]
   active = true
   rate = 1
 
+  # XYZ Point Cloud. RGB Optional
   [publish.pointcloud]
   active = false
-  color = true
-  stride = 2
+  color = true  # add color to point cloud?
+  stride = 2 # will downsample the point cloud
   rate = 1
