--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,6 @@ message ("PROTO_HDRS = ${PROTO_HDRS}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
-set(CMAKE_BUILD_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake-build)
 
 
 get_target_property(eigen_include_dirs eigen INTERFACE_INCLUDE_DIRECTORIES)
@@ -64,10 +63,9 @@ message ("CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
 message ("eigen_include_dirs = ${eigen_include_dirs}")
 message ("CMAKE_LIBRARY_OUTPUT_DIRECTORY = ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
 message ("CMAKE_ARCHIVE_OUTPUT_DIRECTORY = ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
-message ("CMAKE_BUILD_INCLUDE_DIRECTORY = ${CMAKE_BUILD_INCLUDE_DIRECTORY}")
 message ("Open3D_INCLUDE_DIRS = ${Open3D_INCLUDE_DIRS}")
 
-    
+
 # Set all the dependencies
 set(DEPENDENCIES glfw realsense2-gl ${realsense2_LIBRARY} ${OPENGL_LIBRARIES} ${DEPENDENCIES} ${PROTOBUF_LIBRARIES} 
 ${Open3D_LIBRARIES} ${OpenCV_LIBRARIES} OpenMP::OpenMP_CXX gflags glog eCAL::core) 
@@ -75,26 +73,24 @@ ${Open3D_LIBRARIES} ${OpenCV_LIBRARIES} OpenMP::OpenMP_CXX gflags glog eCAL::cor
 # Add the application sources to the target
 # add_executable(rs-motion-2 src/rs-motion-2.cpp)
 # add_executable(rs-test src/rs-test.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
-
-add_library(rs-util src/utility.cpp ${PROTO_SRCS})
-add_executable(rs-pub src/rs-pub.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
-add_executable(rs-save src/rs-save.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
-add_executable(rs-integrate-server src/rs-integrate-server.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
-
-# Link the Libraries
 # target_link_libraries(rs-motion-2 ${realsense2_LIBRARY} ${DEPENDENCIES})
 # target_link_libraries(rs-test ${realsense2_LIBRARY} ${DEPENDENCIES}) 
-target_link_libraries(rs-pub PUBLIC ${DEPENDENCIES})
-target_link_libraries(rs-save PUBLIC ${DEPENDENCIES})
-target_link_libraries(rs-integrate-server PUBLIC ${DEPENDENCIES})
 
+# Create Object library, these utility files are used for each exectuable
+add_library(rs-util OBJECT src/utility.cpp ${PROTO_SRCS})
+# Create the executables
+add_executable(rs-pub src/rs-pub.cpp ${PROTO_HDRS})
+add_executable(rs-save src/rs-save.cpp ${PROTO_HDRS})
+add_executable(rs-integrate-server src/rs-integrate-server.cpp ${PROTO_HDRS})
 
-# target_link_directories(rs-pub PUBLIC /usr/lib /usr/lib/x86_64-linux-gnu /usr/local/lib ${CMAKE_BUILD_INCLUDE_DIRECTORY} ${Open3D_LIBRARY_DIRS})
-# target_link_directories(rs-save PUBLIC /usr/lib /usr/lib/x86_64-linux-gnu /usr/local/lib ${CMAKE_BUILD_INCLUDE_DIRECTORY} ${Open3D_LIBRARY_DIRS})
-# target_link_directories(rs-integrate-server PUBLIC /usr/lib /usr/lib/x86_64-linux-gnu /usr/local/lib ${CMAKE_BUILD_INCLUDE_DIRECTORY} ${Open3D_LIBRARY_DIRS})
+# Link the Libraries
+target_link_libraries(rs-pub PUBLIC ${DEPENDENCIES} rs-util)
+target_link_libraries(rs-save PUBLIC ${DEPENDENCIES} rs-util)
+target_link_libraries(rs-integrate-server PUBLIC ${DEPENDENCIES} rs-util)
 
-
-target_include_directories(rs-pub PUBLIC
+# Set the include directories
+set(CMAKE_BUILD_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake-build)
+set(INCLUDE_DIRS_ALL 
     ${PROJECT_SOURCE_DIR}/src/include
     /usr/include
     /usr/local/include
@@ -102,43 +98,27 @@ target_include_directories(rs-pub PUBLIC
     ${CMAKE_BUILD_INCLUDE_DIRECTORY}
     ${PROJECT_SOURCE_DIR}/../librealsense/common/res
     ${PROJECT_SOURCE_DIR}/../librealsense/src
-    
     ${PROTOBUF_INCLUDE_DIRS}
     ${GFLAG_INCLUDE_DIRS}
     ${toml11_SOURCE_DIR}
     ${Open3D_INCLUDE_DIRS}
+) 
+
+target_include_directories(rs-util PUBLIC
+    ${INCLUDE_DIRS_ALL}
+)
+
+target_include_directories(rs-pub PUBLIC
+    ${INCLUDE_DIRS_ALL}
 )
 
 target_include_directories(rs-save PUBLIC
-    ${PROJECT_SOURCE_DIR}/src/include
-    /usr/include
-    /usr/local/include
-    /usr/local/include/opencv2
-    ${CMAKE_BUILD_INCLUDE_DIRECTORY}
-    ${PROJECT_SOURCE_DIR}/../librealsense/common/res
-    ${PROJECT_SOURCE_DIR}/../librealsense/src
-
-    ${PROTOBUF_INCLUDE_DIRS}
-    ${GFLAG_INCLUDE_DIRS}
-    ${toml11_SOURCE_DIR}
-    ${Open3D_INCLUDE_DIRS}
+    ${INCLUDE_DIRS_ALL}
 )
 
 target_include_directories(rs-integrate-server PUBLIC
-    ${PROJECT_SOURCE_DIR}/src/include
-    /usr/include
-    /usr/local/include
-    /usr/local/include/opencv2
-    ${CMAKE_BUILD_INCLUDE_DIRECTORY}
-    ${PROJECT_SOURCE_DIR}/../librealsense/common/res
-    ${PROJECT_SOURCE_DIR}/../librealsense/src
-
-    ${PROTOBUF_INCLUDE_DIRS}
-    ${GFLAG_INCLUDE_DIRS}
-    ${toml11_SOURCE_DIR}
-    ${Open3D_INCLUDE_DIRS}
+    ${INCLUDE_DIRS_ALL}
 )
-
 
 target_include_directories(rs-pub SYSTEM PUBLIC ${eigen_include_dirs})
 target_include_directories(rs-save SYSTEM PUBLIC ${eigen_include_dirs})
