--- a/config/l515/rspub_default.toml
+++ b/config/l515/rspub_default.toml
@@ -31,8 +31,8 @@ active = true
 [[pipeline_streams]]
 device_name = "Intel RealSense L515"
 stream_name = "Color"
-width = 1280
-height = 720
+width = 640
+height = 480
 framerate = 30
 format = "BGR8"
 active = true
@@ -46,7 +46,7 @@ active = true
 
   [filters.decimation]
   active = true
-  magnitude = 4.0
+  magnitude = 2.0
 
   [filters.disparity]
   active = false
@@ -66,6 +66,7 @@ active = true
 
   [filters.align]
   active=true
+  stream="depth"
 
 
 ### Topics ###
