--- a/Docker/base/Dockerfile
+++ b/Docker/base/Dockerfile
@@ -95,7 +95,7 @@ FROM ecal_install as realsense_install
 RUN git clone --single-branch --branch v2.40.0 --recursive https://github.com/IntelRealSense/librealsense.git /opt/librealsense && \
     cd /opt/librealsense && mkdir build && cd build && \
     cmake ../ -DFORCE_RSUSB_BACKEND=true -DCMAKE_BUILD_TYPE=release -DBUILD_EXAMPLES=true -DBUILD_GRAPHICAL_EXAMPLES=true -DBUILD_PYTHON_BINDINGS=true && \
-    make -j${N_CPUS} && \
+    make -j12 && \
     make install && \
     echo "from .pyrealsense2 import *" >> /usr/lib/python3/dist-packages/pyrealsense2/__init__.py && \
     rm -rf /opt/librealsense
@@ -109,7 +109,7 @@ RUN git clone --single-branch --branch v0.12.0 --recursive https://github.com/in
     cd /opt/Open3D && git apply ../o3d.patch && \
     mkdir build && cd build && \
     cmake ../ -DBUILD_CPP_EXAMPLES=OFF -DBUILD_EXAMPLES=OFF -DBUILD_JUPYTER_EXTENSION=OFF -DENABLE_JUPYTER=OFF -DGLIBCXX_USE_CXX11_ABI=ON -DUSE_SYSTEM_EIGEN3=ON -DBUILD_GUI=OFF -DBUILD_FILAMENT_FROM_SOURCE=OFF && \
-    make -j${N_CPUS} && \
+    make -j12 && \
     make install && make install-pip-package && \
     rm -rf /opt/Open3D
 
